<resources>
    <string name="app_name">sample app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">Here is a random number between 0 and %d</string>
    <string name="toast_button_next">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="record_button_text">Record</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_heading">Try recording using the mic</string>
    <string name="button_record_audio">Click to record</string>
    <string name="go_to_home">Home Page</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>

</resources>
